CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (pcmerge)
SET(CMAKE_CXX_STANDARD 14)


FIND_PACKAGE(Boost 1.40 COMPONENTS program_options REQUIRED)
FIND_PACKAGE(PCL 1.3 REQUIRED COMPONENTS common io visualization filters)
#FIND_PACKAGE(OpenCV REQUIRED COMPONENTS core imgproc highgui features2d xfeatures2d)
#FIND_PACKAGE(Ceres REQUIRED)

INCLUDE_DIRECTORIES(
  ${Boost_INCLUDE_DIR}
  ${PCL_INCLUDE_DIRS}
  #${CERES_INCLUDE_DIRS}
)
LINK_DIRECTORIES(
  ${PCL_LIBRARY_DIRS}
)
ADD_DEFINITIONS(
  ${PCL_DEFINITIONS}
)

FILE(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/*.cpp)
ADD_EXECUTABLE(pcmerge
  ${SRC_FILES}
)
TARGET_LINK_LIBRARIES(pcmerge
  LINK_PUBLIC
  ${Boost_LIBRARIES}
  #${PCL_LIBRARIES}
  ${PCL_COMMON_LIBRARIES}
  ${PCL_IO_LIBRARIES}
  ${PCL_VISUALIZATION_LIBRARIES}
  ${PCL_FILTERS_LIBRARIES}
  #${OpenCV_LIBS}
  #${CERES_LIBRARIES}
)
